fixed overflow on x-axis

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap");
 * {
   /* padding: 0.5rem 0.5rem; */
-  margin: 0;
-  padding: 0;
+  /* margin: 0%;
+  padding: 0; */
   font-family: "Scheherazade New", serif;
+}
+
+body {
+  margin: 0;
+  overflow-x: hidden;
 }
 .section {
   background-color: #12475f;
